# jupyter-book-template

./: .gitignore  README.md  myst.yml  pyproject.toml
_plugins/: dynamical-systems.mjs
_static/css/: dynamical_systems.css
_static/js/: dynamical_systems.js  server.js
dev/: simulation.md  validate_injection.sh
