[project]
name = "jupyter-book-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter-book",
]

[tool.uv.sources]
jupyter-book = { git = "ssh://git@github.com/eljoserass/jupyter-book.git", rev = "feat/start-dynsim-server-injection" }
